--- a/aboutme.html
+++ b/aboutme.html
@@ -102,8 +102,8 @@
                     </ul>
                 </section>
                 <ul class="copyright">
-                    <li>&copy; Untitled. All rights reserved</li>
-                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>&copy;Photography Portfolio.</li>
+                    <li>Design: <a>Armeen F.</a></li>
                 </ul>
             </div>
         </footer>
